checkstyle and new gfx in index page