@@ -29,18 +29,27 @@ import org.crosswire.common.util.Convert;
  */
 public class BooleanChoice extends ReflectedChoice
 {
+    /* (non-Javadoc)
+     * @see org.crosswire.common.config.Choice#getConvertionClass()
+     */
     public Class getConvertionClass()
     {
         return Boolean.TYPE;
     }
 
+    /* (non-Javadoc)
+     * @see org.crosswire.common.config.ReflectedChoice#convertToString(java.lang.Object)
+     */
     public String convertToString(Object orig)
     {
         return Convert.boolean2String(((Boolean) orig).booleanValue());
     }
 
+    /* (non-Javadoc)
+     * @see org.crosswire.common.config.ReflectedChoice#convertToObject(java.lang.String)
+     */
     public Object convertToObject(String orig)
     {
-        return new Boolean(Convert.string2Boolean(orig));
+        return Boolean.valueOf(Convert.string2Boolean(orig));
     }
 }
